--- a/app/views/sponsored_posts/edit.html.erb
+++ b/app/views/sponsored_posts/edit.html.erb
@@ -1,5 +1,4 @@
- 
- <h1>New Post</h1>
+<h1>Edit Post</h1>
  
  <div class="row">
    <div class="col-md-4">
@@ -11,11 +10,9 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for [@topic, @post] do |f| %>
+     <%= form_for [@post.topic, @post] do |f| %>
        <div class="form-group">
- # #13
          <%= f.label :title %>
- # #14
          <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
        </div>
        <div class="form-group">
@@ -23,9 +20,9 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
        </div>
        <div class="form-group">
- # #15
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
    </div>
  </div>
+
