--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,8 +6,11 @@
  <% end %>
  <div class="row">
    <div class="col-md-8">
-     <p class="lead"><%= @topic.description %></p>
- <!-- #10 -->
+     <p class="lead">
+       <%= render partial: "labels/list", locals: { labels: @topic.labels } %>
+       <br />
+       <%= @topic.description %>
+     </p>
      <% @topic.posts.each do |post| %>
        <%= render partial: 'posts/post', locals: {post: post} %>
      <% end %>
@@ -15,6 +18,7 @@
    <% if current_user %>
      <div class="col-md-4">
        <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+       <%= render partial: "labels/list", locals: { labels: post.labels } %>
      </div>
    <% end %>
  </div>
