--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,6 +12,7 @@
        <%= @topic.description %>
      </p>
      <% @topic.posts.each do |post| %>
+       <%= render partial: 'votes/voter', locals: { post: post } %>
        <%= render partial: 'posts/post', locals: {post: post} %>
      <% end %>
    </div>
